# projectalprogambatugram

./: .gitignore  LICENSE  README.md  attendance_common.h  attendance_system.cpp  attendance_system.h  client.cpp  iambouttogram.c  iambouttogram.cpp  iambouttogram.json  iambouttogram_client_main.cpp  iambouttogram_server_main.cpp  server.cpp
Fixed/: GAPJERmeletop.md  asep.md  attendance_20250521.json
RFID IAMBOUTTOGRAM/project/: index.html
RFID IAMBOUTTOGRAM/project/src/: App.tsx
RFID IAMBOUTTOGRAM/project/src/components/: Dashboard.tsx  DataControls.tsx  Header.tsx  LogsTable.tsx  RFIDSimulator.tsx  Tabs.tsx
RFID IAMBOUTTOGRAM/project/src/context/: AppContext.tsx
RFID IAMBOUTTOGRAM/project/src/data/: mockData.ts
RFID IAMBOUTTOGRAM/project/src/types/: index.ts
project/: CMakeLists.txt
project/include/: AttendanceSystem.hpp  Lab.hpp  RFIDReader.hpp  ScanLog.hpp  User.hpp
project/src/: AttendanceSystem.cpp  main.cpp
